Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122778

QTreeView stylesheet does apply the border and the background color to the branches

XMLWordPrintable

    • 3ca615d97 (dev), 755f96436 (6.8), e0d518c84 (6.7)

      Defining in the stylesheet a background color and a border color for an item does apply the border and the background color to the branches as well.

      There is no issues with Qt5 nor if only the border color is defined.

      The issue is especially apparent when a selected item has a different background color and a border-color.

      To reproduce, please run the attached example project.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            santhoshkumar Santhosh Kumar Selvaraj
            tuomas.vaarala Tuomas Vaarala
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes